--- a/src/styles.module.scss
+++ b/src/styles.module.scss
@@ -1,4 +1,8 @@
+body {
+  margin: 0;
+}
+
 .app {
-    background-color: green;
-    height: 100vh;
+  background-color: green;
+  height: 100vh;
 }
