--- a/src/components/ControlsPanel/styles.module.scss
+++ b/src/components/ControlsPanel/styles.module.scss
@@ -5,6 +5,8 @@
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   height: 252px;
+  display: flex;
+  flex-direction: column;
 }
 
 .title {
@@ -18,9 +20,11 @@
   font-size: 12px;
   text-transform: uppercase;
   color: #4a4a4a;
+  margin-top: 20px;
 }
 
 .control-items {
+  margin-top: 15px;
   width: 100%;
   display: flex;
   flex-wrap: wrap;
